# thermal-fist-wrapper

./: .gitignore  README.md  V11.nb  pyproject.toml
input/configs/: create_low_T_table.yaml  create_sample_T=5MeV_table.yaml  example_scan_chi2.yaml  scan_chi2_AuAu.yaml  scan_chi2_AuAu_11d5GeV_no_hyperons.yaml  scan_chi2_AuAu_19d6GeV_no_hyperons.yaml  scan_chi2_AuAu_200GeV_w_hyperons.yaml  scan_chi2_AuAu_27d0GeV_no_hyperons.yaml  scan_chi2_AuAu_39d0GeV_no_hyperons.yaml  scan_chi2_AuAu_7d7GeV_no_hyperons.yaml  scan_chi2_CuCu.yaml  scan_chi2_UU.yaml  scan_chi2_calibration.yaml  scan_w_lattice_Lead.yaml
output/: ANALYSIS=T_muB_muQ_scan_chi2_MODELTYPE=0_DATA=STAR-AuAu7.7GeV_feeddown_corrected_TIMESTAMP=20251103-153337.csv  ANALYSIS=T_muB_muQ_scan_chi2_MODELTYPE=0_DATA=STAR-AuAu7.7GeV_feeddown_corrected_TIMESTAMP=20251103-153958.csv  ANALYSIS=T_muB_muQ_scan_chi2_MODELTYPE=0_DATA=STAR-AuAu7.7GeV_feeddown_corrected_TIMESTAMP=20251103-155235.csv  ANALYSIS=T_muB_muQ_scan_chi2_MODELTYPE=0_DATA=STAR-UU200GeV_feeddown_corrected_TIMESTAMP=20251008-215342.csv  ANALYSIS=T_muB_muQ_w_lattice_scan_chi2_MODELTYPE=0_DATA=ALICE-5.02TeVPbPb_0-10-symmetrized_and_averaged_TIMESTAMP=20251009-030547.csv  T=30MeV.csv  T=5MeV.csv
src/thermal_fist_wrapper/: __init__.py  __main__.py  cli.py  config.py  logger.py  pool.py  thermal_fist_binding.py
src/thermal_fist_wrapper/analyses/: T_muB_muQ_scan_chi2.py  T_muB_muQ_w_lattice_scan_chi2.py  __init__.py  low_T_table.py  scan_chi2.py
